some more changes 2

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ _options:
 		</var>
 	</span>
 </p>
-<p class="editable">Malt is an annual festival celebrating the finest craft beer in San Francisco. This year we have over 50 craft beers on tap, food trucks, live music and entertainment. Tickets are available right here for $45. Valid government issued ID required on entry.</p>
+<p class="editable">The Dusty Jerker is a 100 kilometer gravel event in East-Central Illinois.</p>
 
 <h3 class="editable">Sponsors</h3>
 <div class="gallery">
