--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ start_datetime: 2020-05-02 9:00:00
 end_datetime: 2020-05-02 14:00:00
 timezone: America/Chicago
 description: A fun bit challenging Gravel Event in East-Central Illinois
-background_image: /uploads/2015/12.jpeg
+background_image: /uploads/bg.jpg
 map:
   address: 100 Main St, Hoopeston, IL
   zoom: 16
