--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ background_image: /uploads/bg.jpg
 permalink: /404.html
 ---
 
-<h1><img class="logo" src="/images/logo.png" alt="Malt Logo"></h1>
+<!--<h1><img class="logo" src="/images/logo.png" alt="Malt Logo"></h1>-->
 <h2>{{ page.title }}</h2>
 
 <p>This page doesnt exist!</p>
