add link to results test

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: Dusty Jerker Gravel
 start_datetime: 2020-05-02 9:00:00
 end_datetime: 2020-05-02 14:00:00
 timezone: America/Chicago
-description: A fun bit challenging Gravel Event in East-Central Illinois
+description: A fun but challenging Gravel Event in East-Central Illinois
 background_image: /uploads/bg.jpg
 map:
   address: 100 Main St, Hoopeston, IL
@@ -117,6 +117,10 @@ _options:
 <h3 class="editable">Get your tickets</h3>
 {{ site.eventbrite_embed }}
 -->
+
+<h3 class="editable">Links</h3>
+<a href=results.html>Results</a>
+
 
 <h3 class="editable">Tell your friends</h3>
 <div class="sharing">
