remove beer logos

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@ _options:
 <p class="editable">The Dusty Jerker is a 100 kilometer gravel event in East-Central Illinois.</p>
 
 <h3 class="editable">Sponsors</h3>
+<h4 class="editable">Coming Soon...</h4>
+<!--
 <div class="gallery">
 	{% for feature in page.sponsors %}
 		<a href="{% include relative-src.html src=feature.link %}">
@@ -112,7 +114,7 @@ _options:
 		</a>
 	{% endfor %}
 </div>
-
+-->
 <!--
 <h3 class="editable">Get your tickets</h3>
 {{ site.eventbrite_embed }}
