few more cleanups

--- a/index.html
+++ b/index.html
@@ -115,13 +115,12 @@ _options:
 	{% endfor %}
 </div>
 -->
-<!--
-<h3 class="editable">Get your tickets</h3>
-{{ site.eventbrite_embed }}
--->
-
+<h3 class="editable">Registration</h3>
+<h4 class="editable">Coming Soon...</h4>
+<h3 class="editable">The Route</h3>
+<h4 class="editable">Coming Soon...</h4>
 <h3 class="editable">Links</h3>
-<a href=results.html>Results</a>
+<h4 class="editable">Coming Soon...</h4>
 
 
 <h3 class="editable">Tell your friends</h3>
