update contact form email address

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ _options:
 	<label for="message">Message</label>
 	<textarea id="message" name="message"></textarea>
 
-	<input type="hidden" name="_to" value="contact@example.com">
+	<input type="hidden" name="_to" value="staff@dustyjerker.com">
 	<input type="text" name="_gotcha" style="display: none;">
 
 	<input type="submit" value="Send Message">
