--- a/index.html
+++ b/index.html
@@ -14,66 +14,9 @@ sponsors:
   - label_image: /uploads/sponsors/wildcard.png
     title: Wild Card Cycling 
     link: http://www.wildcardcycling.org
-  - label_image: /uploads/beers/label-2.png
-    title: Professor Pope
-    link: #
-  - label_image: /uploads/beers/label-3.png
-    title: Blazing Dog
-    link: #
-  - label_image: /uploads/beers/label-4.png
-    title: Extravagant Bartender
-    link: #
-  - label_image: /uploads/beers/label-5.png
-    title: Brain Sour
-    link: #
-  - label_image: /uploads/beers/label-6.png
-    title: Chinchilla
-    link: #
-  - label_image: /uploads/beers/label-7.png
-    title: Frosty Boots
-    link: #
-  - label_image: /uploads/beers/label-8.png
-    title: Grape Pirate
-    link: #
-  - label_image: /uploads/beers/label-9.png
-    title: Blue Bus
-    link: #
-  - label_image: /uploads/beers/label-10.png
-    title: Orange Tank
-    link: #
-  - label_image: /uploads/beers/label-11.png
-    title: Kangaroo
-    link: #
-  - label_image: /uploads/beers/label-12.png
-    title: CloudCannon
-    link: #
 photos:
   - image: /uploads/2015/1.jpeg
     title: Malt Festival 1
-  - image: /uploads/2015/2.jpeg
-    title: Malt Festival 2
-  - image: /uploads/2015/3.jpeg
-    title: Malt Festival 3
-  - image: /uploads/2015/4.jpeg
-    title: Malt Festival 4
-  - image: /uploads/2015/5.jpeg
-    title: Malt Festival 5
-  - image: /uploads/2015/6.jpeg
-    title: Malt Festival 6
-  - image: /uploads/2015/7.jpeg
-    title: Malt Festival 7
-  - image: /uploads/2015/8.jpeg
-    title: Malt Festival 8
-  - image: /uploads/2015/9.jpeg
-    title: Malt Festival 9
-  - image: /uploads/2015/10.jpeg
-    title: Malt Festival 10
-  - image: /uploads/2015/11.jpeg
-    title: Malt Festival 11
-  - image: /uploads/2015/12.jpeg
-    title: Malt Festival 12
-  - image: /uploads/2015/13.jpeg
-    title: Malt Festival 13
 _options:
   label_image:
     width: 400
@@ -101,26 +44,24 @@ _options:
 </p>
 <p class="editable">The Dusty Jerker is a 100 kilometer gravel event in East-Central Illinois.</p>
 
-<h3 class="editable">Sponsors</h3>
-<div class="gallery">
-	{% for feature in page.sponsors %}
-		<a href="{% include relative-src.html src=feature.link %}">
-			<div class="inner-wrapper">
-				<img src="{% include relative-src.html src=feature.label_image %}" alt="{{ feature.title }}">
-			</div>
-			<p class="caption">{{ feature.title }}</p>
-		</a>
-	{% endfor %}
-</div>
-
-
+<h3 class="editable">Information</h3>
+<h4 class="editable">Coming Soon...</h4>
 <h3 class="editable">Registration</h3>
 <h4 class="editable">Coming Soon...</h4>
 <h3 class="editable">The Route</h3>
 <h4 class="editable">Coming Soon...</h4>
-<h3 class="editable">Links</h3>
-<h4 class="editable">Coming Soon...</h4>
 
+<h3 class="editable">Sponsors</h3>
+<div class="gallery">
+        {% for feature in page.sponsors %}
+                <a href="{% include relative-src.html src=feature.link %}">
+                        <div class="inner-wrapper">
+                                <img src="{% include relative-src.html src=feature.label_image %}" alt="{{ feature.title }}">
+                        </div>
+                        <p class="caption">{{ feature.title }}</p>
+                </a>
+        {% endfor %}
+</div>
 
 <h3 class="editable">Tell your friends</h3>
 <div class="sharing">
