--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ _options:
 <p class="success">Message sent, we'll be in touch soon.</p>
 
 <p class="dates">
-	{{ page.start_datetime | date: "%A %-d of %B %Y %-I%P" }} - {{ page.end_datetime | date: "%-I%P" }}
+	{{ page.start_datetime | date: "%A %B %-d %Y %-I%P" }} - {{ page.end_datetime | date: "%-I%P" }}
 	<span class="addtocalendar atc-style-button-icon atc-style-menu-wb">
 		<a class="atcb-link">{% include icons/date.svg %}</a>
 		<var class="atc_event">
