--- a/index.html
+++ b/index.html
@@ -44,8 +44,25 @@ _options:
 </p>
 <p class="editable">The Dusty Jerker is a 100 kilometer gravel event in East-Central Illinois.</p>
 
+<h3 class="editable">About</h3>
+<h4 class="editable">2020 will mark the inaugural Dusty Jerker Gravel Fondo.
+What this nearly pancake flat 100km course lacks in elevation will be more than made up in winds (hopefully), dust, and a much higher percentage of actual gravel than most gravel events. We aren't talking chipseal here folks. Bring your wide tires and be prepared to tiptoe through some loose corners.
+<br><br>
+But don't let this scare you away. The course is perfect for first-timer gravel riders all the way up to seasoned Dirty Kanza veterans.
+<br><br>
+THIS IS NOT A RACE. There will be riders who treat and ride it like a race, and that is fine. We encourage hard and fast, but safe riding. However, the only requirement is to enjoy yourself and have the ability to complete 100km of riding. Top finishers for Men and Women may be awarded a little something, but this is currently TBD. More important is showing up and starting to be entered in the Prize Lottery (See below).
+</h4>
+<h3 class="editable">What Makes Dusty Jerker Different?</h3>
+<h4 class="editable">
+ - Support. No teams cars allowed, but you can expect food stations and a SAG number for terminal flats or mechanicals. You won't be left on the side of the road or walking 20 miles with your bike. Other completely unsupported events are intimidating, we want you to have a great experience whether you're sprinting with the lead group or broke your chain at mile 40.<br>
+ - Gravel Gravel Gravel. Many gravel rides are glorified road fondos with a handful of gravels sections thrown in. Vermillion county provides endless opportunity for gravel options. Expect to spend most of your ride on gravel.<br>
+ - Prize Lottery. All event riders who start will be entered into a lottery to win some very cool prizes. That's right, you can come in dead last and walk away with more than the "winner". Exactly what and how many prizes are yet to be determined. Watch here for updates as they are confirmed. Top finishers for Men and Women may be awarded a little something, but this is currently TBD.<br>
+</h4>
 <h3 class="editable">Information</h3>
-<h4 class="editable">Coming Soon...</h4>
+<h4 class="editable">
+	The Hoopeston Area has a nice variety of restaurants, a bar, a bowling alley (we need to check their hours), several fun parks, and a few other attractions. Instead of packing your bike and driving by yourself. Bring your family and let them explore the area or grab a bite to eat while you fight headwinds and pick gravel out of your teeth for 3+ hours.
+
+</h4>
 <h3 class="editable">Registration</h3>
 <h4 class="editable">Coming Soon...</h4>
 <h3 class="editable">The Route</h3>
