--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ THIS IS NOT A RACE. There will be riders who treat and ride it like a race, and 
 <h3 class="editable">What Makes Dusty Jerker Different?</h3>
 <h4 class="editable">
  - Support. No teams cars allowed, but you can expect food stations and a SAG number for terminal flats or mechanicals. You won't be left on the side of the road or walking 20 miles with your bike. Other completely unsupported events are intimidating, we want you to have a great experience whether you're sprinting with the lead group or broke your chain at mile 40.<br>
- - Gravel Gravel Gravel. Many gravel rides are glorified road fondos with a handful of gravels sections thrown in. Vermillion county provides endless opportunity for gravel options. Expect to spend most of your ride on gravel.<br>
+ - Gravel Gravel Gravel. Many gravel rides are glorified road fondos with a handful of gravels sections thrown in. Vermilion county provides endless opportunity for gravel options. Expect to spend most of your ride on gravel.<br>
  - Prize Lottery. All event riders who start will be entered into a lottery to win some very cool prizes. That's right, you can come in dead last and walk away with more than the "winner". Exactly what and how many prizes are yet to be determined. Watch here for updates as they are confirmed. Top finishers for Men and Women may be awarded a little something, but this is currently TBD.<br>
 </h4>
 <h3 class="editable">Information</h3>
