add wahoo sponsor

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ sponsors:
   - label_image: /uploads/sponsors/wildcard.png
     title: Wild Card Cycling 
     link: http://www.wildcardcycling.org
+  - label_image: /uploads/sponsors/wahoo-white-transparent.png
+    title: Wahoo Fitness
+    link: https://www.wahoofitness.com
 photos:
   - image: /uploads/2015/1.jpeg
     title: Malt Festival 1
