--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ sponsors:
   - label_image: /uploads/sponsors/wahoo-white-transparent.png
     title: Wahoo Fitness
     link: https://www.wahoofitness.com
+  - label_image: /uploads/sponsors/suf-logo.png
+    title: The Sufferfest
+    link: https://www.thesufferfest.com
 photos:
   - image: /uploads/2015/1.jpeg
     title: Malt Festival 1
