update elemnt to 2x

--- a/prizes.html
+++ b/prizes.html
@@ -8,7 +8,7 @@ background_image: /uploads/bg.jpg
 
 prizes:
   - label_image: /uploads/prizes/wahoo-elemnt-roam.png
-    title: Wahoo ELEMNT ROAM
+    title: (2x) Wahoo ELEMNT ROAM
     link: http://www.wahoofitness.com
 
 photos:
