--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ THIS IS NOT A RACE. There will be riders who treat and ride it like a race, and 
 <h3 class="editable">The Route</h3>
 <h4 class="editable">Coming Soon...</h4>
 <h3 class="editable">Prizes</h3>
-<h4 class="editable">A list of the major prizes included in the raffle can be found <a href=prizes.html>here.</a></h4>
+<h4 class="editable">A list of the major prizes included in the raffle can be found <a href=prizes/>here.</a></h4>
 
 <h3 class="editable">Sponsors</h3>
 <div class="gallery">
