Updated info for COVID-19

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@ _options:
 </p>
 <p class="editable">The Dusty Jerker is a 100 kilometer gravel event in East-Central Illinois.</p>
 
+<h3 class="editable">COVID-19 Update</h3>
+<h4 class="editable">Due to both the situation around COVID-19 and USA Cycling suspending event permits (and thus insurance) the Dusty Jerker 2020 Gravel Ride has been postponed.
+<br>We hope to reschedule for a date later in the year, but without a clean timeline for USAC lifting the suspension of permits, this decision is still pending.
+<br>Safety of all participants is of the utmost importance to us, even if USAC resumes permits, we may choose to cancel or postpone further for 2020.
+<br>Rest assured that Dusty Jerker will not die. We will be ready for 2021 should 2020 prove to be a bust.
+<br>Keep your fitness up and wash your hands.
+
 <h3 class="editable">About</h3>
 <h4 class="editable">2020 will mark the inaugural Dusty Jerker Gravel Fondo.
 What this nearly pancake flat 100km course lacks in elevation will be more than made up in winds (hopefully), dust, and a much higher percentage of actual gravel than most gravel events. We aren't talking chipseal here folks. Bring your wide tires and be prepared to tiptoe through some loose corners.
